--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,7 +5,7 @@
   --primary-color: #ffcf33;
   --primary-hover: #e6b82e;
   --secondary-color: #605E5C;
-  --background-color: #fffef2;
+  --background-color: #ded3b057;
   --surface-color: #fffef2;
   --border-color: none;
   --text-primary: #252218;
